changes in index.html

--- a/rebase.html
+++ b/rebase.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>some chamges in local</p>
+    <p>some chamges in local 123</p>
 </body>
 </html>
