--- a/rebase.html
+++ b/rebase.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <p>some chamges in local 123</p>
+    <p>
+        some changes in remote to learn rebasing
+    </p>
 </body>
 </html>
