--- a/rebase.html
+++ b/rebase.html
@@ -11,5 +11,9 @@
     <p>
         some changes in remote to learn rebasing
     </p>
+
+    <form >
+        some changes in remote to learn MERGE from github(without command)
+    </form>
 </body>
 </html>
