--- a/rebase.html
+++ b/rebase.html
@@ -15,5 +15,6 @@
     <form >
         some changes in remote to learn MERGE from github(without command)
     </form>
+    <form action="">changes</form>
 </body>
 </html>
